--- a/classLibraryHash.html
+++ b/classLibraryHash.html
@@ -255,17 +255,15 @@ Here is the caller graph for this function:</div>
 <div class="dyncontent">
 <div class="center"><img src="classLibraryHash_acd2d24d693c2c3f366dc5958d048c7ba_icgraph.png" border="0" usemap="#aclassLibraryHash_acd2d24d693c2c3f366dc5958d048c7ba_icgraph" alt=""/></div>
 <map name="aclassLibraryHash_acd2d24d693c2c3f366dc5958d048c7ba_icgraph" id="aclassLibraryHash_acd2d24d693c2c3f366dc5958d048c7ba_icgraph">
-<area shape="rect" title="Computes a hash value for a book object based on its ISBN." alt="" coords="435,84,593,110"/>
-<area shape="rect" href="classInventory.html#a7ec8050eb3e747fc2ca9dc36996f2ed5" title="Adds a book to the inventory." alt="" coords="245,55,376,80"/>
-<area shape="poly" title=" " alt="" coords="419,86,376,80,377,74,420,81"/>
-<area shape="rect" href="classInventory.html#a75431d03b667d5b1e638bb8f49618064" title="Removes a book from the inventory." alt="" coords="234,108,387,134"/>
-<area shape="poly" title=" " alt="" coords="420,111,388,114,387,109,419,105"/>
-<area shape="rect" href="classLibrarian.html#ac9480777425028ba596f93ea58c5ebf4" title="Adds a new book to the inventory." alt="" coords="18,5,173,31"/>
-<area shape="poly" title=" " alt="" coords="236,53,154,34,155,29,237,48"/>
-<area shape="rect" href="classLibrarian.html#a8550e8f5250c49ff3b421e0fdc445d1f" title="Default constructor for Librarian." alt="" coords="32,55,159,80"/>
-<area shape="poly" title=" " alt="" coords="229,70,160,70,160,65,229,65"/>
-<area shape="rect" href="classLibrarian.html#a3d535828d4b603e12b2751c61cdd191c" title="Removes a book from the inventory." alt="" coords="5,104,186,145"/>
-<area shape="poly" title=" " alt="" coords="218,125,186,126,186,120,218,120"/>
+<area shape="rect" title="Computes a hash value for a book object based on its ISBN." alt="" coords="410,55,568,80"/>
+<area shape="rect" href="classInventory.html#a7ec8050eb3e747fc2ca9dc36996f2ed5" title="Adds a book to the inventory." alt="" coords="220,29,351,55"/>
+<area shape="poly" title=" " alt="" coords="394,58,351,53,352,48,395,53"/>
+<area shape="rect" href="classInventory.html#a75431d03b667d5b1e638bb8f49618064" title="Removes a book from the inventory." alt="" coords="209,79,362,104"/>
+<area shape="poly" title=" " alt="" coords="395,81,363,85,362,80,394,76"/>
+<area shape="rect" href="classLibrarian.html#ac9480777425028ba596f93ea58c5ebf4" title="Adds a new book to the inventory." alt="" coords="5,5,161,31"/>
+<area shape="poly" title=" " alt="" coords="204,35,161,30,161,25,204,30"/>
+<area shape="rect" href="classLibrarian.html#a8550e8f5250c49ff3b421e0fdc445d1f" title="Default constructor for Librarian." alt="" coords="19,55,147,80"/>
+<area shape="poly" title=" " alt="" coords="205,55,147,62,147,57,204,50"/>
 </map>
 </div>
 
@@ -322,11 +320,17 @@ Here is the caller graph for this function:</div>
 <div class="dyncontent">
 <div class="center"><img src="classLibraryHash_a40f0272e979a0a3b9493d94628947e78_icgraph.png" border="0" usemap="#aclassLibraryHash_a40f0272e979a0a3b9493d94628947e78_icgraph" alt=""/></div>
 <map name="aclassLibraryHash_a40f0272e979a0a3b9493d94628947e78_icgraph" id="aclassLibraryHash_a40f0272e979a0a3b9493d94628947e78_icgraph">
-<area shape="rect" title="Converts an ISBN into a hash value." alt="" coords="231,31,406,56"/>
-<area shape="rect" href="classInventory.html#a8e2fd9f4b8abe7f2ca08f0ab32dadfc0" title="Finds a book in the inventory by its ISBN." alt="" coords="5,5,183,31"/>
-<area shape="poly" title=" " alt="" coords="215,35,183,31,183,26,215,29"/>
-<area shape="rect" href="classInventory.html#a5e6448a98c4211580ae463a25ec984fc" title="Checks if a book is available by its ISBN." alt="" coords="7,55,181,80"/>
-<area shape="poly" title=" " alt="" coords="215,57,182,61,181,56,215,52"/>
+<area shape="rect" title="Converts an ISBN into a hash value." alt="" coords="459,55,634,80"/>
+<area shape="rect" href="classInventory.html#a8e2fd9f4b8abe7f2ca08f0ab32dadfc0" title="Finds a book in the inventory by its ISBN." alt="" coords="234,5,411,31"/>
+<area shape="poly" title=" " alt="" coords="469,53,384,34,385,29,471,48"/>
+<area shape="rect" href="classInventory.html#a5e6448a98c4211580ae463a25ec984fc" title="Checks if a book is available by its ISBN." alt="" coords="236,55,409,80"/>
+<area shape="poly" title=" " alt="" coords="443,70,410,70,410,65,443,65"/>
+<area shape="rect" href="classInventory.html#a53688860be61a72a3b887224715996c5" title="Removes a book from the inventory by ISBN." alt="" coords="246,104,399,130"/>
+<area shape="poly" title=" " alt="" coords="471,87,385,106,384,101,469,82"/>
+<area shape="rect" href="classLibrarian.html#a3d535828d4b603e12b2751c61cdd191c" title="Removes a book from the inventory." alt="" coords="5,63,186,104"/>
+<area shape="poly" title=" " alt="" coords="230,106,186,99,187,94,231,101"/>
+<area shape="rect" href="classLibrarian.html#a1274a0da3ca11a342e73eac7e01f54c7" title="Removes a book from the inventory." alt="" coords="5,128,186,169"/>
+<area shape="poly" title=" " alt="" coords="231,132,187,139,186,133,230,127"/>
 </map>
 </div>
 
