--- a/md_README.html
+++ b/md_README.html
@@ -120,8 +120,17 @@ UML diagram</h1>
 <p>The UML Diagram is found in two places, both online at <a href="https://ultrapheonix.github.io/LibraryManagement/">https://ultrapheonix.github.io/LibraryManagement/</a> and found in the file</p>
 <h1><a class="anchor" id="autotoc_md11"></a>
 Code Snippets</h1>
-<p>The entire project is centered around this method, which is my static hash method <br  />
- </p>
+<p>The entire project is centered around this method, which is my static hash method </p><div class="fragment"><div class="line"> ++</div>
+<div class="line"><span class="keywordtype">int</span> <a class="code hl_function" href="classLibraryHash.html#acd2d24d693c2c3f366dc5958d048c7ba">LibraryHash::HashBook</a>(<span class="keyword">const</span> <a class="code hl_class" href="classBook.html">Book</a> *b, <span class="keyword">const</span> <span class="keywordtype">int</span> size) {</div>
+<div class="line">    <span class="keywordflow">return</span> <span class="keyword">static_cast&lt;</span><span class="keywordtype">int</span><span class="keyword">&gt;</span>(b-&gt;<a class="code hl_function" href="classBook.html#a3a886f96f3890afbf4d9a226e0fe83ef">getIsbn</a>()/4943)%size;</div>
+<div class="line">}</div>
+<div class="ttc" id="aclassBook_html"><div class="ttname"><a href="classBook.html">Book</a></div><div class="ttdoc">Represents a book in the library management system.</div><div class="ttdef"><b>Definition</b> Book.h:20</div></div>
+<div class="ttc" id="aclassBook_html_a3a886f96f3890afbf4d9a226e0fe83ef"><div class="ttname"><a href="classBook.html#a3a886f96f3890afbf4d9a226e0fe83ef">Book::getIsbn</a></div><div class="ttdeci">long long getIsbn() const</div><div class="ttdoc">Get the ISBN of the book.</div><div class="ttdef"><b>Definition</b> Book.cpp:113</div></div>
+<div class="ttc" id="aclassLibraryHash_html_acd2d24d693c2c3f366dc5958d048c7ba"><div class="ttname"><a href="classLibraryHash.html#acd2d24d693c2c3f366dc5958d048c7ba">LibraryHash::HashBook</a></div><div class="ttdeci">static int HashBook(const Book *b, int size)</div><div class="ttdoc">Computes a hash value for a book object based on its ISBN.</div><div class="ttdef"><b>Definition</b> LibraryHash.cpp:14</div></div>
+</div><!-- fragment --><p>This method is key to taking in the newly created book, taking its ISBN and then diving it by 4943, a large prime number, and then putting it at that index in the array.</p>
+<h1><a class="anchor" id="autotoc_md12"></a>
+Reflection</h1>
+<p>Overall, I found this project got me substantially more conformable with C++ and how to work with it. This project gave me a good base to build more experience off of. I appreciated how this project put into practice many of the things that I have been learning in CSC 104, and how it allowed me to grow in my overall coding ability, both in and out of C++. </p>
 </div></div><!-- contents -->
 </div><!-- PageDoc -->
 <!-- start footer part -->
