deploy: fc7bc5b84042a1326ad2dcb68d79af38c1a59db7

--- a/md_README.html
+++ b/md_README.html
@@ -117,7 +117,7 @@ Challenges</h1>
 <p>The biggest challenge in this project was managing pointers and managing references, as everything else I had some prior knowledge and experience on how to do. I had to learn how pointers interacted with each-other, and how to effectively the situation when multiple pointers are pointing to the same thing. I solved this by more learning, and choosing to center my project around pointers instead of references, which makes it easier to manage when multiple data structures are pointing to one book.</p>
 <h1><a class="anchor" id="autotoc_md10"></a>
 UML diagram</h1>
-<p>The UML Diagram is found in two places, both online at <a href="https://ultrapheonix.github.io/LibraryManagement/">https://ultrapheonix.github.io/LibraryManagement/</a> and found in the file</p>
+<p>The UML Diagram is found in two places, both online at <a href="https://ultrapheonix.github.io/LibraryManagement/">https://ultrapheonix.github.io/LibraryManagement/</a> and found here <img src="Extras/UMLDiagram.png" alt="UML Diagram" class="inline"/></p>
 <h1><a class="anchor" id="autotoc_md11"></a>
 Code Snippets</h1>
 <p>The entire project is centered around this method, which is my static hash method </p><div class="fragment"><div class="line"> ++</div>
